# Rusty-Esp32

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs  wifi.rs
ui/: .gitignore  test.py
ui/src/: Main.elm
